# urfu-cs-task

./: .gitignore  CMakeLists.txt  README.md
include/: callback_scheduler.h
src/: callback_scheduler.cpp
tests/: callback_scheduler_test.cpp
